syntax = "proto3";

package domain.proxy.v1;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

// Stats is a proxy stats
message Stats {
  // Field mask
  google.protobuf.FieldMask field_mask = 4;

  // Hash
  string hash = 1;
  // Count redirect
  uint64 count_redirect = 2;

  // Update at
  google.protobuf.Timestamp updated_at = 3;
}
