syntax = "proto3";

package infrastructure.rpc.proxy.v1;

import "domain/proxy/v1/proxy.proto";

// ProxyService is the service that provides proxy functionality.
service StatsService {
  // Stats returns the stats for the given proxy.
  rpc Stats(StatsRequest) returns (StatsResponse) {}
}

// StatsRequest is the request for the Stats method.
message StatsRequest {
  // Hash is the hash of the proxy.
  string hash = 1;
}

// StatsResponse is the response for the Stats method.
message StatsResponse {
  // Stats is the stats for the proxy.
  domain.proxy.v1.Stats stats = 1;
}
